# faultline

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  ROADMAP_AND_LIMITATIONS.md  RULEBOOK.md  SCORING_MODEL.md  VISION.md  faultline.config.yaml  install.sh  lshaz.config.yaml
.github/workflows/: ci.yml  lshaz-pr.yml
completions/: lshaz.bash  lshaz.fish  lshaz.zsh
docs/: architecture.md  configuration.md  developer-guide.md  output-formats.md
src/: main.cpp
src/analysis/: AllocatorTopology.cpp  CacheLineMap.cpp  CallGraph.cpp  EscapeAnalysis.cpp  FaultlineASTConsumer.cpp  FaultlineAction.cpp  LshazASTConsumer.cpp  LshazAction.cpp  NUMATopology.cpp  StructLayoutVisitor.cpp
src/cli/: DiffCommand.cpp  DiffCommand.h  ExpCommand.cpp  ExpCommand.h  ExplainCommand.cpp  ExplainCommand.h  HypCommand.cpp  HypCommand.h  InitCommand.cpp  ScanCommand.cpp  ScanCommand.h  ScanResultParser.cpp  ScanResultParser.h
src/core/: Config.cpp  Diagnostic.cpp  DiagnosticDedup.cpp  DiagnosticInteraction.cpp  HotPathOracle.cpp  PerfProfileParser.cpp  PrecisionBudget.cpp  Rule.cpp  (+3 more)
test/: analysis_ground_truth_test.cpp  output_contract_test.cpp  output_schema_contract_test.cpp  pipeline_unit_test.cpp  scan_e2e_test.cpp
test/fixtures/hft_core/: CMakeLists.txt  lshaz.config.yaml
test/fixtures/hft_core/include/: feed_handler.h  matching_engine.h  order_book.h
test/fixtures/hft_core/src/: feed_handler.cpp  main.cpp  matching_engine.cpp  order_book.cpp
tools/: github-actions-example.yml  lshaz-tidy
validation/: .gitignore  README.md  corpus.yaml  run.sh
(+126 files in other folders)
